# This file documents the revision history for Perl extension Catalyst.

        - Added Catalyst::Test::ctx_request to be able to inspect
          the context object after a request is made (Jos Boumans)
        - debug() POD rewrite (jhannah)
        - Change the warning when you have conflicting components to
          present a list (t0m)
        - Move NEXT use and testing deprecated features out to its own
          test application so that the main TestApp isn't polluted with
          spurious warnings (t0m)
        - Add a warning for the old ::[MVC]:: style naming scheme (t0m)
          - Test for this (t0m)
        - Kill Class::C3::Adopt::NEXT warnings for the Catalyst:: namespace
          in production versions (t0m)
        - Make MyApp.pm restartable by unsetting setup_finished in
          the restarter process (t0m)
        - Non-naive implementation of making mutable on restart using
          B::Hooks::OP::Check::StashChange if installed (t0m)
          - Tests for this (t0m)
        - Naive implementation of making all components mutable in the
          forked restart watcher process so native Moose apps using
          immutable restart correctly. (t0m)
          - Tests for this (t0m)
        - Bump Moose dependency to 0.70 so that we avoid nasty surprises
          with is_class_loaded and perl 5.80 when you Moosify MyApp.pm (t0m)
        - Clarify that request arguments aren't unescaped automatically
          (Simon Bertrang) (Closes RT#41153)
        - Don't require C3 for the MRO test (rafl)
        - Bump MX::Emulate::CAF prereq to support list assignment (rafl)
        - Remove useless column in chained action debug table. (rafl)
        - namespace::clean related cleanups (rafl)
        - Import related cleanups and consistency fixes (rafl)
        - Fix test suite TestApp /dump/env action (t0m)

5.8000_06 2009-02-04 21:00
        - Disallow writing to config after setup (rafl)
        - Disallow calling setup more than once (rafl)